Add auto-solve feature to Hanoi Tower with move history
Features added:
- 🤖 Auto Solve button - automatically demonstrates the solution
- Step display - shows current move (e.g., 'Step 1: A → C')
- Move history panel - displays all moves in a scrollable sidebar
- Visual feedback during auto-solve with spinning icon
- Configurable animation speed (500ms between moves)

Implementation:
- Recursive Hanoi algorithm generates optimal move sequence
- Async execution with delays for visualization
- Move history tracks all steps with highlighting
- Current step displayed prominently above canvas
- History panel shows all moves with latest highlighted
- Disabled controls during auto-solve to prevent interference

UI Enhancements:
- Purple 'Auto Solve' button with loading state
- Blue highlighted current step display
- Right sidebar with move history (appears when moves exist)
- Scrollable history for games with many moves
- Latest move highlighted in blue, older moves in gray

User Experience:
- Click 'Auto Solve' to watch optimal solution
- Manual moves also tracked in history
- Step counter shows 'Step N: X → Y' format
- History persists until reset
- Smooth animations between moves

--- a/tongji-rust/Cargo.toml
+++ b/tongji-rust/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "crates/tier3-projects",
     "crates/hanoi",
     "crates/minesweeper",
+    "tauri-app/src-tauri",
 ]
 
 [workspace.package]
